--- a/css/karttasovellus.css
+++ b/css/karttasovellus.css
@@ -1,7 +1,9 @@
 #map {
     width: 100%;
     height: 570px;
+    position: absolute;
 }
+/*Saatiedot*/
 .lampo {
     position: relative;
     font-family: 'Varela', sans-serif;
@@ -19,13 +21,25 @@
     position: relative;
     float: right;
     font-family: 'Varela', sans-serif;
+    height: 555px;
+    overflow-y: scroll;
+    width: 112px;
+    margin-right: -8px;
 }
 .saakuva {
     margin-top: -35px;
     margin-left: -10px;
-    margin-right: -10px;
 }
 .aika {
     color: white;
     font-family: 'Varela', sans-serif;
+    font-weight: bolder;
 }
+.tuuli {
+    font-family: 'Varela', sans-serif;
+    color: lightskyblue;
+    margin-top: -31px;
+    padding-bottom: 18px;
+    padding-left: 0px;
+}
+/*Saatiedot paattyy*/
