--- a/css/karttasovellus.css
+++ b/css/karttasovellus.css
@@ -9,9 +9,9 @@ h1 {
     margin-bottom: 5px;
     margin-left: auto;
     margin-right: auto;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
 }
 #otsikko {
     background-color: background: rgb(0,0,0);
