--- a/css/esittely.css
+++ b/css/esittely.css
@@ -35,6 +35,7 @@ li {
 }
 #vasenpalkki {
     width: 200px;
+    height: 100%;
     border: 2px solid #000;
     font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
     float: left;
@@ -42,6 +43,7 @@ li {
     border: 2px solid #000;
 }
 #palkki {
+    float: left;
     height: 100%;
     width: fit-content;
     margin-bottom: 0px;
