--- a/css/karttasovellus.css
+++ b/css/karttasovellus.css
@@ -1,18 +1,65 @@
-﻿/*Kartta ja navigointi tiedot*/
+﻿html, body{
+    margin: 0;
+
+    padding: 0;
+
+    min-width: 100%;
+    width: 100%;
+    max-width: 100%;
+
+    min-height: 100%;
+    height: 100%;
+    max-height: 100%;
+}
+/*Kartta ja navigointi tiedot*/
+#body {
+    width: 100%;
+    height: 100%;
+}
 #map {
-    width: 65%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-left: 0px;
+    float: right;
+    margin-right: 0px;
+}
+#mapJaSaa {
+    display: inline-flex;
+    margin: 0px;
+    height: 92%;
+    width: calc(99% - 327px);
+    border: solid 1px gray;
+
+}
+#saa {
+    z-index: 9999;
     position: absolute;
-    right: 0;
+    float: right;
+    font-family: 'Varela', sans-serif;
+    height: 90%;
+    overflow-y: scroll;
+    width: 112px;
+    right: 2px;
+
 }
 #navigaatioJaOhjeet
 {
-    display: flex;
-    flex-direction: column;
-    width: 35%;
-    background-color: #FCE903;
-    padding-left: 10px;
+    display: inline-block;
+    width: 304px;
+    background: #ffe259;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffa751, #ffe259);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+
+    font-family: 'Ubuntu', sans-serif;
+    border: solid 1px gray;
+    padding-left: 10px;
+    height: 90.2%;
+    margin: 0;
+    padding-top: 14px;
+    float: left;
+    margin-right: 4px;
 }
 
 .tekstialue
@@ -59,22 +106,7 @@ h1 {
     border-bottom: 2px;
     border: black;
 }
-#mapJaSaa
-{
 
-}
-#saa {
-    overflow: visible;
-    height: 0px;
-    z-index: 9999;
-    position: relative;
-    float: right;
-    font-family: 'Varela', sans-serif;
-    height: 635px;
-    overflow-y: scroll;
-    width: 112px;
-    margin-right: -8px;
-}
 .saakuva {
     margin-top: -35px;
     margin-left: -10px;
