vielä viimeistellympi css

--- a/css/karttasovellus.css
+++ b/css/karttasovellus.css
@@ -2,7 +2,7 @@
     margin: 0;
 
     padding: 0;
-
+    background-color: black;
     min-width: 100%;
     width: 100%;
     max-width: 100%;
@@ -50,7 +50,7 @@
     background: #ffe259;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ffa751, #ffe259);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    box-shadow: inset 2px 1px 20px #e97c71;
 
     font-family: 'Ubuntu', sans-serif;
     border: solid 1px gray;
