--- a/css/esittely.css
+++ b/css/esittely.css
@@ -20,7 +20,7 @@ ul {
     list-style-type: none;
     align-items: stretch;
     padding:0;
-    margin:0;
+    margin:5px;
     display: flex;
     flex-flow: row wrap;
     position: center;
@@ -31,7 +31,7 @@ li {
     margin-left: 10%;
     margin-right: 10%;
     min-width: 300px;
-    width: 50%;
+    width: 70%;
     float: left;
     padding-left: 10px;
     margin-top: 20px;
@@ -41,29 +41,24 @@ li {
     box-shadow: inset 2px 1px 5px #000000;
     background: rgb(255, 255, 255);
 }
-.ryhmäkuva
-{
-    display: flex;
-    flex-direction: column;
-    height: 100px;
-    width: 100px;
-}
 #oikeapalkki
 {
+    width: 0;
     left: 0;
 }
 #kuva_oikea
 {
-    height: 20%;
+    height: 450px;
+    width: 0px;
 }
 #aside
 {
     width: 30%;
 }
 #vasenpalkki {
-    background-color: wheat;
+    background-color: white;
     width: 200px;
-    height: 60%;
+    height: 27%;
     font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
     float: left;
     padding: 10px;
@@ -72,7 +67,6 @@ li {
 #palkki {
     float: left;
     height: 100%;
-    width: fit-content;
     margin-bottom: 0px;
     margin-top: 10px;
 }
@@ -81,7 +75,7 @@ body {
     height: auto;
 }
 /*Kuvat*/
-#palkki_oikea {
-    float: right;
-    position: absolute;
+#palkki_oikea
+{
+top: 0;
 }
