pieniä css säätöjä sovellukseen

--- a/css/karttasovellus.css
+++ b/css/karttasovellus.css
@@ -30,7 +30,7 @@ html, body{
 #mapJaSaa {
     display: inline-flex;
     margin: 0px;
-    height: 92%;
+    height: 100%;
     width: calc(99% - 327px);
     border: solid 1px gray;
 
@@ -40,7 +40,7 @@ html, body{
     position: absolute;
     float: right;
     font-family: 'Varela', sans-serif;
-    height: 90%;
+    height: 100%;
     overflow-y: scroll;
     width: 112px;
     right: 2px;
@@ -54,13 +54,12 @@ html, body{
     background: -webkit-linear-gradient(to right, #ffa751, #ffe259);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     box-shadow: inset 2px 1px 20px #e97c71;
-
     font-family: 'Ubuntu', sans-serif;
     border: solid 1px gray;
     padding-left: 10px;
-    height: 90.2%;
-    margin: 0;
-    padding-top: 14px;
+    height: 100%;
+    margin: 0px;
+    padding-top: 0px;
     float: left;
     margin-right: 4px;
 }
