--- a/css/esittely.css
+++ b/css/esittely.css
@@ -31,15 +31,14 @@ body {
     font-family: 'Ruluko', sans-serif;
 }
 #lista {
-    width: 65%;
+    width: calc(94% - 400px);
     float: right;
     list-style-type: none;
     align-items: stretch;
-    padding:0;
-    margin:5px;
+    padding: 0;
+    margin: 5px 3% 5px 3%;
     display: flex;
     flex-flow: row wrap;
-    position: center;
     justify-content: space-around;
 }
 .api {
@@ -72,29 +71,31 @@ body {
 }
 #aside
 {
-    width: 30%;
+
 }
 #vasenpalkki {
     background-color: white;
-    width: 100%;
-    height: 22%;
+    width: 312px;
+    height: 224px;
     font-family: 'Ruluko', sans-serif;
     font-size: 20px;
     float: left;
     padding: 0px 10px 0px 10px;
     margin: 15px 10px 10px 24px;
-    border: 1px solid #000000;
     position: relative;
-    box-shadow: inset 2px 1px 19px 2px rgba(87,117,144,1);
+    box-shadow: inset 2px 1px 19px 2px rgba(87, 117, 144, 1);
     border: 10px solid rgb(42, 59, 73, 0.93);
     border-radius: 15px;
+    text-align: center;
 }
 #palkki {
     float: left;
-    height: 100%;
     margin-bottom: 0px;
-    margin-top: 10px;
-    width: 24%;
+    margin-top: 0px;
+    padding-top: 10px;
+    width: 400px;
+    background-color: #ffbd01;
+    padding-bottom: 30px;
 }
 body {
     width: auto;
@@ -158,4 +159,11 @@ top: 0;
 #ryhma a:hover {
     background-color: #ff991a;
 }
-
+#omakuva {
+    float: left;
+    margin: 20px 0px 0px 25px;
+}
+#video {
+    float: left;
+    margin: 30px 0px 0px 25px;
+}
