--- a/css/esittely.css
+++ b/css/esittely.css
@@ -158,6 +158,7 @@ top: 0;
     padding: 14px;
     border: rgb(42, 59, 73, 0.93) solid 3px;
     font-family: 'Ruluko', sans-serif;
+    text-decoration: none;
 }
 #ryhma a:hover {
     background-color: #ff991a;
