--- a/css/esittely.css
+++ b/css/esittely.css
@@ -40,6 +40,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
+    padding-bottom: 40px;
 }
 .api {
     overflow-x: auto;
@@ -84,7 +85,7 @@ body {
     margin: 15px 10px 10px 24px;
     position: relative;
     box-shadow: inset 2px 2px 8px 2px rgba(47, 62, 76, 0.19);
-    border: 10px solid rgb(42, 59, 73, 0.93);
+    border: 10px solid rgba(42, 59, 73, 0.93);
     border-radius: 15px;
     text-align: center;
 }
@@ -156,7 +157,7 @@ top: 0;
     background-color: #ffd024;
     border-radius: 10px;
     padding: 14px;
-    border: rgb(42, 59, 73, 0.93) solid 3px;
+    border: rgba(42, 59, 73, 0.93) solid 3px;
     font-family: 'Ruluko', sans-serif;
     text-decoration: none;
 }
