--- a/css/esittely.css
+++ b/css/esittely.css
@@ -168,6 +168,9 @@ top: 0;
     float: left;
     margin: 30px 0px 0px 25px;
 }
+#omakuva:hover {
+    opacity: 0.7;
+}
 #video {
     float: left;
     margin: 60px 0px 30px 25px;
